--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD 20)
 # Source files
 add_library(${PROJECT_NAME} 
             source/writer.cpp
-            #source/listener.cpp
+            source/listener.cpp
             source/motor_handler.cpp
             source/utils.cpp
             )
