Implement specific control modes + examples

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,9 @@ endif()
 # Generate example executables
 add_executable(example1 examples/example1.cpp)
 target_link_libraries(example1 ${PROJECT_NAME})
+add_executable(ex2_position examples/ex2_position.cpp)
+target_link_libraries(ex2_position ${PROJECT_NAME})
+add_executable(ex3_speed examples/ex3_speed.cpp)
+target_link_libraries(ex3_speed ${PROJECT_NAME})
+add_executable(ex4_torque examples/ex4_torque.cpp)
+target_link_libraries(ex4_torque ${PROJECT_NAME})
