--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,3 +33,5 @@ add_executable(ex3_speed examples/ex3_speed.cpp)
 target_link_libraries(ex3_speed ${PROJECT_NAME})
 add_executable(ex4_torque examples/ex4_torque.cpp)
 target_link_libraries(ex4_torque ${PROJECT_NAME})
+add_executable(ex5_gravity_compensation examples/ex5_gravity_compensation.cpp)
+target_link_libraries(ex5_gravity_compensation ${PROJECT_NAME})
