Add speed test code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,3 +35,5 @@ add_executable(ex4_torque examples/ex4_torque.cpp)
 target_link_libraries(ex4_torque ${PROJECT_NAME})
 add_executable(ex5_gravity_compensation examples/ex5_gravity_compensation.cpp)
 target_link_libraries(ex5_gravity_compensation ${PROJECT_NAME})
+add_executable(singleThread examples/singleThread.cpp)
+target_link_libraries(singleThread ${PROJECT_NAME})
