--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,3 +37,5 @@ add_executable(ex5_gravity_compensation examples/ex5_gravity_compensation.cpp)
 target_link_libraries(ex5_gravity_compensation ${PROJECT_NAME})
 add_executable(singleThread examples/singleThread.cpp)
 target_link_libraries(singleThread ${PROJECT_NAME})
+add_executable(PID_tuning examples/PID_tuning.cpp)
+target_link_libraries(PID_tuning ${PROJECT_NAME})
