Implement debug functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,3 +37,6 @@ add_executable(singleThread examples/singleThread.cpp)
 target_link_libraries(singleThread ${PROJECT_NAME})
 add_executable(PID_tuning examples/PID_tuning.cpp)
 target_link_libraries(PID_tuning ${PROJECT_NAME})
+
+add_executable(test examples/test.cpp)
+target_link_libraries(test ${PROJECT_NAME})
